--- a/index.html
+++ b/index.html
@@ -74,5 +74,7 @@
     </div>
 
     <script defer src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-engine"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 </body>
 </html>
